# voice-to-text

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  bot.py  fly.toml  modal_app.py  pyproject.toml  requirements.txt
