[project]
name = "voice-to-text"
version = "0.1.0"
description = "Telegram bot that transcribes voice/video messages via Groq Whisper"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2; python_version>='3.13'",
    "groq>=0.11",
    "pydub>=0.25",
    "python-telegram-bot>=21.0",
    "translators>=5.9",
]
