[project]
name = "voice-to-text"
version = "0.1.0"
description = "Telegram bot that transcribes voice/video messages via Modal-hosted faster-whisper"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2; python_version>='3.13'",
    "modal>=0.66",
    "pydub>=0.25",
    "python-telegram-bot>=21.0",
    "translators>=5.9",
]
